# developer-panel

./: README.md  data.json  main.py
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: ai-pr-review.yml  codeql.yml  first-interaction.yml  label-actions.yml  labeler.yml  merge-queue-ci.yml  release-drafter.yml  stale.yml  todo.yml
.vortex/: .vortex  pyproject.toml
template/: admin_dashboard.html  login.html  user_dashboard.html
